<resources>
    <string name="app_name">My Twitter</string>
    <string name="id_paceholder">Email 또는 계정을 입력해주세요.</string>
    <string name="password_placeholder">비밀번호를 입력해주세요.</string>
    <string name="write_placeholder">무슨 일이 일어나고 있나요?</string>
    <string name="login_button">Login</string>
    <string name="send_tweet">트윗</string>
    <string name="title_activity_timeline">TimelineActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="retweet_label">리트윗</string>
    <string name="favorite_label">마음에 들어요</string>

    <!-- Scrab Activity -->
    <string name="scrap_title">스크랩</string>
    <string name="scrap_text_hint">검색 내용을 입력하세요.</string>
    <string name="scrap_search_content_label">내용</string>
    <string name="scrap_search_start_date">시작 날짜</string>
    <string name="scrap_search_end_date">종료 날짜</string>
    <string name="scrap_search_btn_label">검색</string>

    <!-- Profile Activity -->
    <string name="profile_setting">편집</string>
    <string name="following_label">팔로잉</string>
    <string name="follower_label">팔로워</string>

    <!-- Nav Menu item -->
    <string name="nav_profile">프로필</string>

    <!-- Tabbar tab menu name -->
    <string name="tab_menu1">Twitter</string>
    <string name="tab_menu2">Naver</string>
    <string name="tab_menu3">Daum</string>

    <!-- Tweet Select Dialog -->
    <string name="tweet_date">예약 날짜를 선택하세요.</string>
    <string name="tweet_time">예약 시간을 선택하세요.</string>
    <string name="tweet_btn_label">트윗</string>
</resources>
