<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:fbutton="http://schemas.android.com/tools"
              android:gravity="top|center_horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="260dp"
        android:background="@android:color/white"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/ic_content"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/search_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/scrap_text_hint"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="15sp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center_vertical"
                app:met_baseColor="@color/twitterDefaultColor"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="@color/twitterDefaultColor"
                app:met_singleLineEllipsis="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/ic_calendar"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/search_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/scrap_search_start_date"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="15sp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center_vertical"
                app:met_baseColor="@color/twitterDefaultColor"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/twitterDefaultColor"
                app:met_singleLineEllipsis="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:text="~"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/search_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/scrap_search_end_date"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="15sp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center_vertical"
                app:met_baseColor="@color/twitterDefaultColor"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/twitterDefaultColor"
                app:met_singleLineEllipsis="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <info.hoang8f.widget.FButton
                android:id="@+id/scrap_search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_margin="10dp"
                android:minHeight="40dp"
                android:minWidth="150dp"
                android:text="@string/scrap_search_btn_label"
                android:textColor="@android:color/white"
                fbutton:buttonColor="@color/scrapbtncolor"
                fbutton:shadowEnabled="true" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>